<resources>
    <string name="app_name">BAMX_almacenista</string>

    <string name="edtUsername">Usuario</string>
    <string name="edtPassword">Contraseña</string>
    <string name="btnLogin">Iniciar sesión</string>

    <string name="edtFolio">Folio</string>
    <string name="edtTienda">Tienda</string>
    <string name="edtResponsable">Responsable</string>
    <string name="edtRol">Rol</string>
    <string name="btnProductos">Productos</string>

    <string name="txtFechaHora">Fecha y hora</string>
    <string name="txtAlmacen">ID Almacen</string>
    <string name="txtOperador">Nombre operador</string>
    <string name="txtResponsable">Nombre compelto</string>
    <string name="txtAbarrote">Cantidad</string>
    <string name="txtFrutaVerdura">Cantidad</string>
    <string name="txtPan">Cantidad</string>
    <string name="txtNoComestible">Cantidad</string>
    <string name="txtTotal">Cantidad</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEditar">Editar</string>
    <string name="btnContinuar">Continuar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="titulo">Enviar información</string>
    <string name="mensaje">¿Está seguro que desea realizar esta acción?</string>
    <string name="no">NO</string>
    <string name="si">SI</string>
    <string name="ok">¡Datos enviados correctamente!</string>

    <string name="tituloS">CERRAR SESIÓN</string>
    <string name="mensajeS">¿Está seguro que desea cerrar sesión?</string>
    <string name="error">¡Este campo es requerido!</string>

    <string name="btnConfirmar">Confirmar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>