<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonativoEditable">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtDonativoE"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="DONATIVO"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDonativoE">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Fecha y hora:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtFechaHora"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/txtFechaHora"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Almacén:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtUbicacionE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/txtAlmacen"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Operador:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtOperadorE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_noeditable"
                android:gravity="center_vertical"
                android:text="@string/txtOperador"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Productos"
            android:textColor="#FF9300"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Abarrote:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtAbarrote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_editable"
                android:gravity="center"
                android:text="@string/txtAbarrote"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Fruta y verdura:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtFrutaVerdura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_editable"
                android:gravity="center"
                android:text="@string/txtFrutaVerdura"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Pan:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtPan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_editable"
                android:gravity="center"
                android:text="@string/txtPan"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="No comestible:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edtNoComestible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_editable"
                android:gravity="center"
                android:text="@string/txtNoComestible"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="110sp"
                android:layout_height="wrap_content"
                android:text="Total:"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtTotalE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/form_noeditable"
                android:gravity="center"
                android:text="@string/txtTotal"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:backgroundTint="#FF9300"
                android:text="@string/btnCancelar" />

            <Button
                android:id="@+id/btnGuardarE"
                android:layout_width="125dp"
                android:layout_height="55dp"
                android:layout_marginLeft="70dp"
                android:backgroundTint="#F3071E"
                android:text="@string/btnGuardar" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>